<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <RadioGroup
        android:id="@+id/deptChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RadioButton
            android:id="@+id/compSci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compSci" />

        <RadioButton
            android:id="@+id/sIS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sIS" />

        <RadioButton
            android:id="@+id/bInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bInfo" />

        <RadioButton
            android:id="@+id/dS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dS" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginBottom="16dp"
        android:text="@string/buttonCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/buttonConfirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel" />
</androidx.constraintlayout.widget.ConstraintLayout>